# Audio-Friend

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
src/: aiff.rs  file_io.rs  raw.rs  waff.rs
